p2/k3s/app3/app3.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3

spec:
  ports:
    - name: http
      port: 80
  selector:
    app: app3
